@@ -2,6 +2,8 @@ lib/Acme/CPANAuthors/European.pm
 Makefile.PL
 MANIFEST
 t/000_basic.t
+t/950_pod.t
+t/960_pod_coverage.t
 Changes
 README
 META.yml                                 Module meta-data (added by MakeMaker)
