@@ -12,14 +12,22 @@ my %args = (
     NAME                 => 'Acme::CPANAuthors::European',
     VERSION_FROM         => 'lib/Acme/CPANAuthors/European.pm',
     ABSTRACT_FROM        => 'lib/Acme/CPANAuthors/European.pm',
-    PREREQ_PM            => { },
+    PREREQ_PM            => {'Acme::CPANAuthors::Register' => 0,  
+                             'strict'                      => 0,  
+                             'warnings'                    => 0,  
+                            }, 
     MIN_PERL_VERSION     =>  5.006,
     AUTHOR               => 'Abigail <cpan@abigail.be>',
     LICENSE              => 'mit',
     META_MERGE           => {
-        build_requires   => {'Test::More' => 0},
+        build_requires   => {'Test::More'        => 0,
+                             'Acme::CPANAuthors' => 0,  
+                             'strict'            => 0,  
+                             'warnings'          => 0,  
+                            }, 
         resources        => {
-            repository   => 'git://github.com/Abigail/Acme--CPANAuthors--European.git',
+            repository   =>
+                    'git://github.com/Abigail/Acme--CPANAuthors--European.git',
         },
         keywords         => [qw [ ]],
     },
